继续完善代码

--- a/blog-web/src/main/resources/templates/mail.html
+++ b/blog-web/src/main/resources/templates/mail.html
@@ -60,7 +60,6 @@
 <body>
 <div class="body">
     <div class="content">
-        <!--<img src="http://zhstatic.zhihu.com/eDM/promotion/onehour/logo@2x.png" />-->
         <h3 th:text="'Hi,' + ${userName}"></h3>
         <p>感谢您注册 liuzw的博客</p>
         <p>请点击以下链接激活你的账户：</p>
@@ -70,7 +69,7 @@
         <hr style="border:dashed 1px #ddd" />
         <a class="btn" th:href="${url}">点击完成验证</a>
         <p class="ask">本邮件为系统自动发送，请勿回复。</p>
-        <p class="ask">如果有疑问，请联系我们：670115782@qq.com</p>
+        <p class="ask">如果有疑问，请联系我们: 670115782@qq.com</p>
         <p class="ask"> - liuzw</p>
 
     </div>
